Bug 314756 - (Desktop Effect) Mouse Click Animation does not recognize mouse buttons correctly
Summary: (Desktop Effect) Mouse Click Animation does not recognize mouse buttons corre...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.10.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 4.10.1
Assignee: KWin default assignee
URL: http://git.reviewboard.kde.org/r/108883/
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-09 12:08 UTC by Denis M. (Phr33d0m)
Modified: 2013-03-12 09:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
snapshot500.png (42.70 KB, image/png)
2013-02-09 12:09 UTC, Denis M. (Phr33d0m)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Denis M. (Phr33d0m) 2013-02-09 12:08:50 UTC
Hello, 
First of all thanks for the very nice effect. My girlfriend loves it!

This issue is that the colors in the 'Basic Settings' tab for middle mouse button and right mouse button are swapped.
For example, if:
* Middle Mouse Button Color: green
* Right Mouse Button Color: blue

When I right click it shows green color and if I middle click it shows blue color.
I'm attaching a screenshot showing this behaviour.

My mouse is:
Bus 002 Device 004: ID 046d:c01b Logitech, Inc. MX310 Optical Mouse
Comment 1 Denis M. (Phr33d0m) 2013-02-09 12:09:18 UTC
Created attachment 77048 [details]
snapshot500.png
Comment 2 Thomas Lübking 2013-02-12 21:29:37 UTC
Git commit eb00ec834ffbfe1822d77f2dc5a0f702d651938a by Thomas Lübking.
Committed on 10/02/2013 at 07:05.
Pushed by luebking into branch 'KDE/4.10'.

fix mouse button order

X counts the middle button as 2 and right as 3, Qt as 4 and 2 resp. the flags
... we shall at least match our GUI ;-)
FIXED-IN: 4.10.1
REVIEW: 108883

M  +2    -2    kwin/effects/mouseclick/mouseclick.cpp

http://commits.kde.org/kde-workspace/eb00ec834ffbfe1822d77f2dc5a0f702d651938a
Comment 3 Thomas Lübking 2013-02-12 21:30:17 UTC
Git commit 742e0b285ebb0c9db18a9538aec0cca19491309e by Thomas Lübking.
Committed on 10/02/2013 at 07:05.
Pushed by luebking into branch 'master'.

fix mouse button order

X counts the middle button as 2 and right as 3, Qt as 4 and 2 resp. the flags
... we shall at least match our GUI ;-)
FIXED-IN: 4.10.1
REVIEW: 108883

M  +2    -2    kwin/effects/mouseclick/mouseclick.cpp

http://commits.kde.org/kde-workspace/742e0b285ebb0c9db18a9538aec0cca19491309e
Comment 4 As Long Ago, Rebirth Has Map (anagram of my real name) 2013-03-12 08:56:14 UTC
is there a way to just update this effect without upgrading everything to 4.10.1?? my kde installs are finally just the way i want them and i dont like upgrading packages unless something is broken, if it isnt broke for me i dont fix it, tends to get me in trouble --- last time i upgraded things went bad, apt seems to have a mind of its own sometimes.. or at least which kde component should i upgrade to get this fix? kde-window-manager? or something else? i didnt find this as a separate package is it?
Comment 5 Martin Flöser 2013-03-12 09:10:55 UTC
> is there a way to just update this effect without upgrading everything to 4.10.1?? 
Please contact your distribution